[gd_scene load_steps=4 format=3 uid="uid://57we0ndu6cs"]

[ext_resource type="Script" path="res://scripts/player/GUI/GUI.gd" id="1_07d6n"]
[ext_resource type="PackedScene" uid="uid://ynft66ay5enm" path="res://scenes/player/GUI/Inventory/Inventory.tscn" id="2_fj64m"]
[ext_resource type="PackedScene" uid="uid://b83y4dp3nnqli" path="res://scenes/connect_dots.tscn" id="3_pr3y8"]

[node name="Gui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_07d6n")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -489.0
offset_top = -249.0
offset_right = -449.0
offset_bottom = -209.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 0
offset_left = 18.0
offset_top = 8.0
offset_right = 954.0
offset_bottom = 485.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 47.0

[node name="ExitButton" type="Button" parent="Container/Panel/VBoxContainer"]
layout_mode = 2
text = "exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="Container/Panel" groups=["Button_container"]]
layout_mode = 0
offset_left = 48.0
offset_top = 86.0
offset_right = 210.0
offset_bottom = 293.0
theme_override_constants/separation = 20

[node name="Inventory" type="Button" parent="Container/Panel/VBoxContainer2"]
layout_mode = 2
text = "Inventory"

[node name="Spells" type="Button" parent="Container/Panel/VBoxContainer2"]
layout_mode = 2
text = "Spells"

[node name="Main_Menu" type="Button" parent="Container/Panel/VBoxContainer2"]
layout_mode = 2
text = "Main Menu"

[node name="Achievements" type="Control" parent="Container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Inventory" parent="Container" instance=ExtResource("2_fj64m")]
layout_mode = 1
offset_left = 192.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 52.0

[node name="connect_dots" parent="Container" instance=ExtResource("3_pr3y8")]
visible = false
offset_left = 463.0
offset_top = 124.0
offset_right = 463.0
offset_bottom = 124.0
scale = Vector2(0.33, 0.33)

[connection signal="pressed" from="Container/Panel/VBoxContainer2/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Container/Panel/VBoxContainer2/Spells" to="." method="_on_spells_pressed"]
[connection signal="pressed" from="Container/Panel/VBoxContainer2/Spells" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="Container/Panel/VBoxContainer2/Main_Menu" to="." method="_on_main_menu_pressed"]
